--- a/LogbookApp/LogbookApp.Controls/Themes/Generic.xaml
+++ b/LogbookApp/LogbookApp.Controls/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:LogbookApp">
+    xmlns:local="using:LogbookApp.Controls.TemplatedControls">
 
     <Style TargetType="local:DavidsDateControl">
         <Setter Property="Template">
@@ -12,11 +12,11 @@
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}">
                         <StackPanel Orientation="Horizontal">
-                            <ComboBox   Height="30" Width="200"  />
+                            <ComboBox  x:Name="DayComboBox" Height="30" Width="200"  />
                             <Rectangle Width="30"></Rectangle>
-                            <ComboBox   Height="30" Width="200" />
+                            <ComboBox   x:Name="MonthComboBox" Height="30" Width="200" />
                             <Rectangle Width="30"></Rectangle>
-                            <ComboBox   Height="30" Width="200" />
+                            <ComboBox   x:Name="YearComboBox" Height="30" Width="200" />
                             <Rectangle Width="30"></Rectangle>
                         </StackPanel>
 
