--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -14,7 +14,10 @@
     <Page.Resources>
 
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">My Application</x:String>
+        <x:String x:Key="AppName">Flight</x:String>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="26"></Setter>
+        </Style>
     </Page.Resources>
 
     <!--
@@ -23,22 +26,79 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Style="{StaticResource LayoutRootStyle}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="51*"/>
+            <ColumnDefinition Width="632*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
 
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="1">
+       
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
 
             </Grid.RowDefinitions>
-            <controls:DavidsDateControl></controls:DavidsDateControl>
-       </Grid>
-    <Button Grid.Row="1" Width="100" Background="Red"/>
+            
+            <StackPanel Grid.ColumnSpan="2">
+                
+                <TextBlock Text="Date:"/>
+                <controls:DavidsDateControl></controls:DavidsDateControl>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Type:" Width="230" />
+                    <TextBlock Text="Reg:"/>
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Lookups.AcTypes}"></ComboBox>
+                <Rectangle Width="30"></Rectangle>
+                <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Captain:" Width="230" />
+                    <TextBlock Text="Capacity:" />
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                  <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                   <Rectangle Width="30"></Rectangle>
+                  <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Capacity}"></ComboBox>
+                  </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="From:" Width="230"/>
+                    <TextBlock Text="To:" />
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                    <Rectangle Width="30"></Rectangle>
+                    <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Depart:" Width="230"/>
+                    <TextBlock Text="Arrive:" />
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                    <Rectangle Width="30"></Rectangle>
+                    <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                </StackPanel>
+
+
+
+
+            </StackPanel>
+        </Grid>
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
