--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -79,9 +79,13 @@
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" HorizontalAlignment="Left"></ComboBox>
+                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" SelectedValuePath="ICAOCode"
+                              SelectedValue="{Binding Flight.From.ICAOCode}"
+                              HorizontalAlignment="Left"></ComboBox>
                     <Rectangle Width="30"></Rectangle>
-                    <TextBox Width="200" HorizontalAlignment="Left"></TextBox>
+                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" SelectedValuePath="ICAOCode"
+                              SelectedValue="{Binding Flight.To.ICAOCode}"
+                              HorizontalAlignment="Left"></ComboBox>
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
