--- a/LogbookApp/LogbookApp/Views/FlightsPage.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightsPage.xaml
@@ -72,7 +72,7 @@
                 <DataTemplate>
                     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="150">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Capacity}" Foreground="#FFFF06B0" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Text="{Binding Capacity.Code}" Foreground="#FFFF06B0" FontSize="18" VerticalAlignment="Center"></TextBlock>
                             <Rectangle Width="10"/>
                             <TextBlock Text="{Binding Date}" FontSize="14" VerticalAlignment="Center" ></TextBlock>
                         </StackPanel>
@@ -80,11 +80,11 @@
 
                             <TextBlock Text="{Binding Reg}"></TextBlock>
                             <Rectangle Width="25"/>
-                            <TextBlock Text="{Binding AcType}"></TextBlock>
+                            <TextBlock Text="{Binding AcType.Code}"></TextBlock>
                         </StackPanel>
                         <TextBlock  Text="1:00" FontSize="30" 
                        ></TextBlock>
-                        <TextBlock Text="{Binding From}"></TextBlock>
+                        <TextBlock Text="{Binding From.Name}"></TextBlock>
 
                     </StackPanel>
                 </DataTemplate>
