--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -68,9 +68,10 @@
                 <StackPanel Orientation="Horizontal">
                   <TextBox Width="200" Text="{Binding Flight.Captain,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
                    <Rectangle Width="30"></Rectangle>
-                  <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Capacity}" SelectedValue="{Binding Flight.Capacity.Code,Mode=TwoWay}"
-                            SelectedValuePath="Code"
-                            DisplayMemberPath="Code"></ComboBox>
+                  <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Capacity}" 
+                            SelectedValue="{Binding Flight.CapacityId,Mode=TwoWay}"
+                            SelectedValuePath="id"
+                            DisplayMemberPath="Description"></ComboBox>
                   </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
