--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -46,7 +46,7 @@
             <StackPanel Grid.ColumnSpan="2">
                 
                 <TextBlock Text="Date:"/>
-                <controls:DavidsDateControl Date="{Binding FlightDate,Mode=TwoWay}"></controls:DavidsDateControl>
+                <controls:DavidsDateControl Date="{Binding Flight.Date,Mode=TwoWay}"></controls:DavidsDateControl>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Type:" Width="230" />
@@ -55,7 +55,7 @@
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
                 <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Lookups.AcTypes}" DisplayMemberPath="Code" 
-                          SelectedValue="{Binding Flight.AcType.Code,Mode=TwoWay}" SelectedValuePath="Code" ></ComboBox>
+                          SelectedValue="{Binding Flight.AcType,Mode=TwoWay}" ></ComboBox>
                 <Rectangle Width="30"></Rectangle>
                 <TextBox  Text="{Binding Flight.Reg}" Width="200" HorizontalAlignment="Left"></TextBox>
                 </StackPanel>
@@ -69,8 +69,7 @@
                   <TextBox Width="200" Text="{Binding Flight.Captain,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
                    <Rectangle Width="30"></Rectangle>
                   <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Capacity}" 
-                            SelectedValue="{Binding Flight.CapacityId,Mode=TwoWay}"
-                            SelectedValuePath="id"
+                            SelectedValue="{Binding Flight.Capacity,Mode=TwoWay}"
                             DisplayMemberPath="Description"></ComboBox>
                   </StackPanel>
                 <Rectangle Height="10"></Rectangle>
@@ -80,12 +79,12 @@
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" SelectedValuePath="ICAOCode"
-                              SelectedValue="{Binding Flight.From.ICAOCode}"
+                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name"
+                              SelectedValue="{Binding Flight.From, Mode=TwoWay}"
                               HorizontalAlignment="Left"></ComboBox>
                     <Rectangle Width="30"></Rectangle>
-                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" SelectedValuePath="ICAOCode"
-                              SelectedValue="{Binding Flight.To.ICAOCode}"
+                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" 
+                              SelectedValue="{Binding Flight.To, Mode=TwoWay}"
                               HorizontalAlignment="Left"></ComboBox>
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
