Should be able to view existing flight

--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -54,11 +54,11 @@
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Lookups.AcTypes}"
+                <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Flight.Lookups.AcTypes}"
                           DisplayMemberPath="Code" 
-                          SelectedValue="{Binding Flight.AcType,Mode=TwoWay}" ></ComboBox>
+                          SelectedItem="{Binding Flight.AcType,Mode=TwoWay}" ></ComboBox>
                 <Rectangle Width="30"></Rectangle>
-              <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Aircraft}" 
+              <ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Flight.Lookups.Aircraft}" 
                         DisplayMemberPath="Reg" 
                           SelectedValue="{Binding Flight.Aircraft,Mode=TwoWay}" ></ComboBox>
                 </StackPanel>
@@ -71,7 +71,7 @@
                 <StackPanel Orientation="Horizontal">
                   <TextBox Width="200" Text="{Binding Flight.Captain,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
                    <Rectangle Width="30"></Rectangle>
-                  <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Lookups.Capacity}" 
+                  <ComboBox Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Flight.Lookups.Capacity}" 
                             SelectedValue="{Binding Flight.Capacity,Mode=TwoWay}"
                             DisplayMemberPath="Description"></ComboBox>
                   </StackPanel>
@@ -82,11 +82,11 @@
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name"
+                    <ComboBox Width="200" ItemsSource="{Binding Flight.Lookups.Airfields}" DisplayMemberPath="Name"
                               SelectedValue="{Binding Flight.From, Mode=TwoWay}"
                               HorizontalAlignment="Left"></ComboBox>
                     <Rectangle Width="30"></Rectangle>
-                    <ComboBox Width="200" ItemsSource="{Binding Lookups.Airfields}" DisplayMemberPath="Name" 
+                    <ComboBox Width="200" ItemsSource="{Binding Flight.Lookups.Airfields}" DisplayMemberPath="Name" 
                               SelectedValue="{Binding Flight.To, Mode=TwoWay}"
                               HorizontalAlignment="Left"></ComboBox>
                 </StackPanel>
