--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -18,6 +18,11 @@
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="26"></Setter>
         </Style>
+        <Style x:Key="AddAircraftButtonStyle" TargetType="ButtonBase" BasedOn="{StaticResource AppBarButtonStyle}">
+            <Setter Property="AutomationProperties.AutomationId" Value="AddAppBarButton"/>
+            <Setter Property="AutomationProperties.Name" Value="Add Aircraft"/>
+            <Setter Property="Content" Value="&#xE109;"/>
+        </Style>
     </Page.Resources>
 
     <!--
@@ -25,6 +30,21 @@
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
+    <Page.TopAppBar>
+        <AppBar x:Name="topAppBar" Padding="10,0,10,0">
+            <Grid>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <Button Style="{StaticResource AddAircraftButtonStyle}"  Command="{Binding AddAircraftCommand,Mode=TwoWay}"  />
+                    
+
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    
+                    <Button Style="{StaticResource HelpAppBarButtonStyle}" />
+                </StackPanel>
+            </Grid>
+        </AppBar>
+    </Page.TopAppBar>
     <Grid Style="{StaticResource LayoutRootStyle}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="51*"/>
