--- a/LogbookApp/LogbookApp/Views/AircraftSettingsFlyout.xaml
+++ b/LogbookApp/LogbookApp/Views/AircraftSettingsFlyout.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ApplicationSettings"
-    
+    xmlns:localviews="using:LogbookApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:common="using:LogbookApp.Common"
+    
+    
     mc:Ignorable="d"
     d:DesignHeight="768"
     d:DesignWidth="646">
@@ -107,6 +109,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <common:BooleanToVisibilityConverter x:Key="bool2Vis"></common:BooleanToVisibilityConverter>
     </UserControl.Resources>
 
     <Border BorderBrush="#00b2f0" BorderThickness="1,0,0,0">
@@ -161,11 +164,19 @@
                       
                     </GridView>
                  <Grid Grid.Row="1" >
-                     <StackPanel Orientation="Horizontal">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="43"/>
+                        <RowDefinition Height="10"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Horizontal" Grid.RowSpan="2">
                     <Button Content="Add" VerticalAlignment="Top" ></Button>
                     <Button Content="Edit" VerticalAlignment="Top" ></Button>
                     <Button Content="Delete" VerticalAlignment="Top" ></Button>
                     </StackPanel>
+                     <Grid Grid.Row="2">
+                         <localviews:AircraftView Visibility="{Binding Converter={StaticResource bool2Vis},Path=IsEditing}" ></localviews:AircraftView>
+                     </Grid>
                 </Grid>
                
                 </Grid>
