--- a/LogbookApp/LogbookApp/Views/AircraftBasicPage.xaml
+++ b/LogbookApp/LogbookApp/Views/AircraftBasicPage.xaml
@@ -1,6 +1,6 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="LogbookApp.Views.AircraftListBasicPage"
+    x:Class="LogbookApp.Views.AircraftBasicPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -22,18 +22,52 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Style="{StaticResource LayoutRootStyle}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="51*"/>
+            <ColumnDefinition Width="632*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
 
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="1" Grid.Column="1">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.ColumnSpan="2">
+
+              
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <!--<TextBlock Text="Type:" Width="230" />-->
+                    <TextBlock Text="Reg:"/>
+                </StackPanel>
+                <Rectangle Height="10"></Rectangle>
+                <StackPanel Orientation="Horizontal">
+                    <!--<ComboBox Width="200"  HorizontalAlignment="Left" ItemsSource="{Binding Flight.Lookups.AcTypes}"
+                          DisplayMemberPath="Code" 
+                          SelectedItem="{Binding Flight.AcType,Mode=TwoWay}" ></ComboBox>
+                    <Rectangle Width="30"></Rectangle>-->
+                    <TextBox Width="200" Text="{Binding Reg,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
+                </StackPanel>
+              
+
+
+
+            </StackPanel>
+        </Grid>
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="backButton" Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
+            <Button x:Name="backButton"  Click="GoBack" IsEnabled="{Binding Frame.CanGoBack, ElementName=pageRoot}" Style="{StaticResource BackButtonStyle}"/>
             <TextBlock x:Name="pageTitle" Grid.Column="1" Text="{StaticResource AppName}" Style="{StaticResource PageHeaderTextStyle}"/>
         </Grid>
 
