--- a/LogbookApp/LogbookApp/Views/AircraftTypeBasicPage.xaml
+++ b/LogbookApp/LogbookApp/Views/AircraftTypeBasicPage.xaml
@@ -1,6 +1,6 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="LogbookApp.Views.AircraftBasicPage"
+    x:Class="LogbookApp.Views.AircraftTypeBasicPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,7 +13,7 @@
     <Page.Resources>
 
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Aircraft</x:String>
+        <x:String x:Key="AppName">Type</x:String>
     </Page.Resources>
 
     <!--
@@ -41,11 +41,11 @@
 
             <StackPanel Grid.ColumnSpan="2">
 
-              
+
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
                     <!--<TextBlock Text="Type:" Width="230" />-->
-                    <TextBlock Text="Reg:"/>
+                    <TextBlock Text="Code:"/>
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
@@ -53,9 +53,9 @@
                           DisplayMemberPath="Code" 
                           SelectedItem="{Binding Flight.AcType,Mode=TwoWay}" ></ComboBox>
                     <Rectangle Width="30"></Rectangle>-->
-                    <TextBox Width="200" Text="{Binding Flight.Aircraft.Reg,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
+                    <TextBox Width="200" Text="{Binding Flight.AcType.Code,Mode=TwoWay}" HorizontalAlignment="Left"></TextBox>
                 </StackPanel>
-              
+
 
 
 
