--- a/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
+++ b/LogbookApp/LogbookApp/Views/FlightDetailPage1.xaml
@@ -62,6 +62,7 @@
                             Command="{Binding AddAirfieldFromCommand,Mode=TwoWay}"  />
                     <Button Style="{StaticResource AddAirfieldToButtonStyle}" 
                             Command="{Binding AddAirfieldToCommand,Mode=TwoWay}"  />
+                    <Button Style="{StaticResource TotalsAppBarButtonStyle}"  Command="{Binding TotalsCommand,Mode=TwoWay}"  />
 
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -71,6 +72,8 @@
             </Grid>
         </AppBar>
     </Page.BottomAppBar>
+    
+    
     <Grid Style="{StaticResource LayoutRootStyle}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="51*"/>
@@ -152,16 +155,14 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <TextBlock Text="TO" VerticalAlignment="Bottom" Width="85"/>
-                    <Rectangle Width="20"></Rectangle>
-                    <TextBlock Text="LDG" VerticalAlignment="Bottom"/>
+                    <TextBlock Text="TakeOffs/Landings"  VerticalAlignment="Bottom" Width="Auto"/>
+                  
                 </StackPanel>
                 <Rectangle Height="10"></Rectangle>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox Width="85" SelectedValue="{Binding Flight.Takeoffs,Mode=TwoWay}"  ItemsSource="{Binding Numbers}"></ComboBox>
-                    <Rectangle Width="20"></Rectangle>
-                    <ComboBox Width="85"  SelectedValue="{Binding Flight.LDG,Mode=TwoWay}"  ItemsSource="{Binding Numbers}"></ComboBox>
-                    <Rectangle Width="40"></Rectangle>
+                    <ComboBox Width="85" SelectedValue="{Binding Flight.LDG,Mode=TwoWay}"  ItemsSource="{Binding Numbers}"></ComboBox>
+                    
+                    <Rectangle Width="70"></Rectangle>
                     <CheckBox Content="Night" IsChecked="{Binding Flight.Night,Mode=TwoWay}" FontSize="26" VerticalContentAlignment="Center"></CheckBox>
                 </StackPanel>
 
